# xorg-xscope

./: .gitignore  AUTHORS  COPYING  Imakefile  Makefile  Makefile.am  NEWS  README  audio.c  autogen.sh  bigreqscope.h  common.c  configure.ac  decode11.c  decode_bigreq.c  decode_glx.c  decode_lbx.c  decode_randr.c  decode_render.c  decode_shm.c  decode_wcp.c  decodenas.c  extensions.c  extensions.h  fd.c  fd.h  glxscope.h  imakefile  lbxscope.h  nas.h  pexOCNames.h  pexRNames.h  print11.c  print_bigreq.c  print_glx.c  print_lbx.c  print_randr.c  print_render.c  print_shm.c  print_wcp.c  (+17 more)
man/: Makefile.am  xscope.man
